# locosim

./: .gitmodules  Readme.md  install_docker.md  install_docker_linux.md  install_docker_mac.md  install_docker_windows.md  install_native.md  loco-install.sh
docker/: Dockerfile  Dockerfile_matlab  Dockerfile_quadruped  install_docker.sh
robot_descriptions/gazebo_plugins/set_damping_plugin/: CMakeLists.txt  package.xml
robot_descriptions/gazebo_plugins/set_mass_plugin/src/: SetMassPlugin.cpp
